<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_refresh"
        android:showAsAction="withText"
        android:title="@string/menu_refresh"/>
    <item
        android:id="@+id/menu_recents"
        android:showAsAction="withText"
        android:title="@string/menu_recents"/>
    <item
        android:id="@+id/menu_backup"
        android:showAsAction="withText"
        android:title="@string/menu_backup"/>
    <item
        android:id="@+id/menu_restore"
        android:showAsAction="withText"
        android:title="@string/menu_restore"/>
    <item
        android:id="@+id/menu_about"
        android:icon="@android:drawable/ic_menu_help"
        android:showAsAction="withText"
        android:title="@string/menu_about"/>

</menu>
