<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view" >
    <group
        android:id="@+id/backup_group"
        android:checkableBehavior="none">
        <item
            android:id="@+id/drawer_backup"
            android:icon="@drawable/ic_drawer_backup"
            android:title="@string/menu_backup" />
        <item
            android:id="@+id/drawer_restore"
            android:icon="@drawable/ic_drawer_restore"
            android:title="@string/menu_restore" />
    </group>
    <group
        android:id="@+id/filter_group"
        android:checkableBehavior="none">
        <item
            android:id="@+id/drawer_filter"
            android:icon="@drawable/ic_drawer_filter"
            android:title="@string/menu_filter" />
        <item
            android:id="@+id/drawer_permission"
            android:icon="@drawable/ic_drawer_filter_permission"
            android:title="@string/menu_permission" />
    </group>
    <item
        android:id="@+id/drawer_theme"
        android:icon="@drawable/ic_drawer_theme"
        android:title="@string/theme_title" />
    <item
        android:id="@+id/drawer_about"
        android:icon="@drawable/ic_drawer_about"
        android:title="@string/menu_about" />
</menu>